# ndk-samples

hello-jni/app/: build.gradle
hello-jni/app/src/main/: AndroidManifest.xml
hello-jni/app/src/main/cpp/: CBConfig.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  ReplicatorManager.cpp  ReplicatorManager.h  hello-jni.cpp
hello-jni/app/src/main/cpp/couchbase/: CMakeLists.txt
hello-jni/app/src/main/cpp/couchbase/include/cbl/: CBL_Edition.h  cbl_config.h
hello-jni/app/src/main/cpp/couchbase/include/cbl++/: Replicator.hh
hello-jni/app/src/main/cpp/couchbase/include/fleece/: slice.hh
hello-jni/app/src/main/cpp/couchbase/include/fleece_support/: betterassert.cc
hello-jni/app/src/main/java/com/example/hellojni/: HelloJni.kt
